--- a/details.html
+++ b/details.html
@@ -35,10 +35,10 @@
         <img src="images/logo.svg" alt="" class="nav__logo-img">
     </a>
 
-    <div class="nav__menu" id="nav-menu">
+   <div class="nav__menu" id="nav-menu">
         <ul class="nav__list">
             <li class="nav__item">
-            <a href="index.html" class="nav__link">Home</a>
+            <a href="index.html" class="nav__link active-link">Home</a>
             </li>
             <li class="nav__item">
             <a href="shop.html" class="nav__link">Shop</a>
@@ -53,12 +53,14 @@
             <a href="login-register.html" class="nav__link">login</a>
             </li>
         </ul>
-        <div class="header__search">
-            <input type="text" placeholder="Search for items..." class="form__input">
+        <div class="header__search" id="input-group">
+            <input type="text" placeholder="Search for items..." class="form__input" data-search>
             <button class="search__btn">
                 <img src="images/search.png" alt="">
             </button>
+            <div class="suggestion__box hide" data-suggestion-box id="data-suggestion"></div>
         </div>
+        <div class="cart__container" data-container></div>
     </div>
     <div class="header__user-actions">
 <a href="wishlist.html" class="header__action-btn">
