--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
             <a href="login-register.html" class="nav__link">login</a>
             </li>
         </ul>
-        <div class="header__search">
-            <input type="text" placeholder="Search for items..." class="form__input">
+        <div class="header__search" id="input-group">
+            <input type="text" placeholder="Search for items..." class="form__input" data-search>
             <button class="search__btn">
                 <img src="images/search.png" alt="">
             </button>
+            <div class="suggestion__box hide" data-suggestion-box id="data-suggestion"></div>
         </div>
+        <div class="cart__container" data-container></div>
     </div>
     <div class="header__user-actions">
 <a href="wishlist.html" class="header__action-btn">
